Spacing fixed

--- a/style/bubble.css
+++ b/style/bubble.css
@@ -40,7 +40,7 @@
 	display: inline-block;
     vertical-align: top;
 	position: relative;
-	max-width: 300px;
+	max-width: 350px;
 	height: auto;
 	background-color: black;
 }
@@ -283,7 +283,7 @@
 	  white-space: normal;
    word-wrap: break-word;
   text-overflow: ellipsis;
-  max-width: 300px;
+  max-width: 350px;
 	-webkit-margin-before: 0em;
 	-webkit-margin-after: 0em;
 }
@@ -292,7 +292,7 @@
 	  white-space: normal;
    word-wrap: break-word;
   text-overflow: ellipsis;
-  max-width: 300px;
+  max-width: 350px;
 	-webkit-margin-before: 0em;
 	-webkit-margin-after: 0em;
 }
